# api/generated.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.10.1 DO NOT EDIT.
 package api
 
 import (
@@ -70,6 +70,12 @@ type ServerInterface interface {
 
 	// (POST /web/private/service-provider/services)
 	AddService(ctx echo.Context) error
+
+	// (POST /web/private/vc)
+	IssueVC(ctx echo.Context) error
+
+	// (GET /web/private/vc/templates)
+	GetVCTemplates(ctx echo.Context) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -313,6 +319,24 @@ func (w *ServerInterfaceWrapper) AddService(ctx echo.Context) error {
 	return err
 }
 
+// IssueVC converts echo context to params.
+func (w *ServerInterfaceWrapper) IssueVC(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.IssueVC(ctx)
+	return err
+}
+
+// GetVCTemplates converts echo context to params.
+func (w *ServerInterfaceWrapper) GetVCTemplates(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.GetVCTemplates(ctx)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -360,6 +384,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.DELETE(baseURL+"/web/private/service-provider/endpoints/:id", wrapper.DeleteEndpoint)
 	router.GET(baseURL+"/web/private/service-provider/services", wrapper.GetServices)
 	router.POST(baseURL+"/web/private/service-provider/services", wrapper.AddService)
+	router.POST(baseURL+"/web/private/vc", wrapper.IssueVC)
+	router.GET(baseURL+"/web/private/vc/templates", wrapper.GetVCTemplates)
 
 }
-
