# domain/generated_types.go
@@ -1,13 +1,18 @@
 // Package domain provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.10.1 DO NOT EDIT.
 package domain
 
 import (
 	"encoding/json"
 	"fmt"
+)
 
-	"github.com/pkg/errors"
+// Defines values for IssueVCRequestVisibility.
+const (
+	IssueVCRequestVisibilityPrivate IssueVCRequestVisibility = "private"
+
+	IssueVCRequestVisibilityPublic IssueVCRequestVisibility = "public"
 )
 
 // CreateSessionRequest defines model for CreateSessionRequest.
@@ -32,6 +37,9 @@ type CredentialIssuer struct {
 type CredentialIssuers struct {
 	AdditionalProperties map[string][]CredentialIssuer `json:"-"`
 }
+
+// Subject of a Verifiable Credential identifying the holder and expressing claims.
+type CredentialSubject map[string]interface{}
 
 // A customer object
 type Customer struct {
@@ -82,6 +90,39 @@ type EndpointProperties struct {
 // Endpoints defines model for Endpoints.
 type Endpoints []Endpoint
 
+// A request for issuing a new Verifiable Credential.
+type IssueVCRequest struct {
+	// The resolvable context of the credentialSubject as URI. If omitted, the "https://nuts.nl/credentials/v1" context is used.
+	// Note: it is not needed to provide the "https://www.w3.org/2018/credentials/v1" context here.
+	Context *string `json:"@context,omitempty"`
+
+	// Subject of a Verifiable Credential identifying the holder and expressing claims.
+	CredentialSubject CredentialSubject `json:"credentialSubject"`
+
+	// rfc3339 time string until when the credential is valid.
+	ExpirationDate *string `json:"expirationDate,omitempty"`
+
+	// DID according to Nuts specification.
+	Issuer string `json:"issuer"`
+
+	// If set, the node publishes this credential to the network. This is the default behaviour.
+	// When set to false, the caller is responsible for distributing the VC to a holder. When the issuer is
+	// also the holder, it then can be used to directly create a presentation (self issued).
+	// Note: a not published credential can still be publicaly revoked.
+	PublishToNetwork *bool `json:"publishToNetwork,omitempty"`
+
+	// Type definition for the credential.
+	Type string `json:"type"`
+
+	// When publishToNetwork is true, the credential can be published publicly or privately to the holder.
+	// This field is mandatory if publishToNetwork is true to prevent accidents. It defaults to "private".
+	Visibility *IssueVCRequestVisibility `json:"visibility,omitempty"`
+}
+
+// When publishToNetwork is true, the credential can be published publicly or privately to the holder.
+// This field is mandatory if publishToNetwork is true to prevent accidents. It defaults to "private".
+type IssueVCRequestVisibility string
+
 // Service defines model for Service.
 type Service struct {
 	// Embedded struct due to allOf(#/components/schemas/ServiceID)
@@ -128,6 +169,21 @@ type ServiceProvider struct {
 // Services defines model for Services.
 type Services []Service
 
+// A template for a VC to be issued
+type VCTemplate struct {
+	// JSON-LD context of the Verifiable Credential
+	Context string `json:"context"`
+
+	// Example credential subject for the Verifiable Credential
+	CredentialSubject map[string]interface{} `json:"credentialSubject"`
+
+	// Verifiable Credential type of the template
+	Type string `json:"type"`
+}
+
+// A credential according to the W3C and Nuts specs.
+type VerifiableCredential map[string]interface{}
+
 // CreateSessionJSONBody defines parameters for CreateSession.
 type CreateSessionJSONBody CreateSessionRequest
 
@@ -162,6 +218,9 @@ type RegisterEndpointJSONBody EndpointProperties
 // AddServiceJSONBody defines parameters for AddService.
 type AddServiceJSONBody ServiceProperties
 
+// IssueVCJSONBody defines parameters for IssueVC.
+type IssueVCJSONBody IssueVCRequest
+
 // CreateSessionJSONRequestBody defines body for CreateSession for application/json ContentType.
 type CreateSessionJSONRequestBody CreateSessionJSONBody
 
@@ -188,6 +247,9 @@ type RegisterEndpointJSONRequestBody RegisterEndpointJSONBody
 
 // AddServiceJSONRequestBody defines body for AddService for application/json ContentType.
 type AddServiceJSONRequestBody AddServiceJSONBody
+
+// IssueVCJSONRequestBody defines body for IssueVC for application/json ContentType.
+type IssueVCJSONRequestBody IssueVCJSONBody
 
 // Getter for additional properties for CredentialIssuers. Returns the specified
 // element and whether it was found
@@ -220,7 +282,7 @@ func (a *CredentialIssuers) UnmarshalJSON(b []byte) error {
 			var fieldVal []CredentialIssuer
 			err := json.Unmarshal(fieldBuf, &fieldVal)
 			if err != nil {
-				return errors.Wrap(err, fmt.Sprintf("error unmarshaling field %s", fieldName))
+				return fmt.Errorf("error unmarshaling field %s: %w", fieldName, err)
 			}
 			a.AdditionalProperties[fieldName] = fieldVal
 		}
@@ -236,7 +298,7 @@ func (a CredentialIssuers) MarshalJSON() ([]byte, error) {
 	for fieldName, field := range a.AdditionalProperties {
 		object[fieldName], err = json.Marshal(field)
 		if err != nil {
-			return nil, errors.Wrap(err, fmt.Sprintf("error marshaling '%s'", fieldName))
+			return nil, fmt.Errorf("error marshaling '%s': %w", fieldName, err)
 		}
 	}
 	return json.Marshal(object)
